# cflookup-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pr.yml
src/: cflookup.rs  lib.rs  net.rs
