[package]
name = "cflookup-cli"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["brotli", "deflate", "gzip", "json", "rustls-tls-native-roots", "zstd"] }
serde_json = { version = "1.0.143", features = ["raw_value", "alloc", "preserve_order"] }
serde_yaml_bw = "2.2.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
http = "1.3.1"
http-serde = "2.1.1"
