[package]
name = "cflookup-cli"
description = "CLI version of https://cflookup.com"
keywords = ["minecraft", "curseforge", "mods", "modpack"]
categories = ["command-line-utilities", "api-bindings", "development-tools", "game-development"]
license = "MIT"
authors = [
    "Up"
]
repository = "https://github.com/UpcraftLP/cflookup-cli"
readme = "README.md"
exclude = [
    "/.github/**"
]
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["brotli", "charset", "deflate", "gzip", "http2", "json", "rustls-tls-native-roots", "system-proxy", "zstd"], default-features = false }
serde_json = { version = "1.0.143", features = ["raw_value", "alloc", "preserve_order"] }
serde_yaml_bw = "2.2.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
http = "1.3.1"
http-serde = "2.1.1"
built = { version = "0.8.0", features = ["chrono"] }

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2"] }
