[package]
name = "cflookup-cli"
description = "CLI version of https://cflookup.com"
keywords = ["minecraft", "curseforge", "mods", "modpack"]
categories = ["command-line-utilities", "api-bindings", "development-tools", "game-development"]
license = "MIT"
authors = [
    "Up"
]
repository = "https://github.com/UpcraftLP/cflookup-cli"
readme = "README.md"
exclude = [
    "/.github/**"
]
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["brotli", "deflate", "gzip", "json", "zstd"] }
serde_json = { version = "1.0.149", features = ["raw_value", "alloc", "preserve_order"] }
serde_yaml_bw = "2.5.5"
tokio = { version = "1.52.2", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
http = "1.4.0"
http-serde = "2.1.1"
built = { version = "0.8.0", features = ["chrono"] }
rootcause = "0.12.1"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2"] }
